fix(cards): remove whitespace top/bottom

--- a/src/scss/custom/_cards.scss
+++ b/src/scss/custom/_cards.scss
@@ -12,6 +12,7 @@
     height: auto;
     @include mobile {
       height: 0;
+      display: none;
     }
     width: 100%;
     &:first-child {
